# Cardiff-University-and-EPSRC-funded-project--AI-enable-reenforcement-learning-in-O-RAN

./: .gitignore  README.md  client.py  pyproject.toml  results.txt  run_all.sh  runall.bat  server.py
Cardiff-University-and-EPSRC-funded-project--AI-enable-reenforcement-learning-in-O-RAN-main/: LRModel.joblib  README.md
Cardiff-University-and-EPSRC-funded-project--AI-enable-reenforcement-learning-in-O-RAN-main/federated package/: 1.py  2.py  FlaskServerData.py  helpers.py
federated package/: 1.py  2.py  FlaskClientData.py
federated_package/: FlaskClientData.py  FlaskServerData.py  helpers.py  models.py  pip install diagrams.py
