[tool.poetry]
name = "5gfederated"
version = "0.1.0"
description = "A federated learning tool to capable of training multiple classifiers in a federated fashion"
authors = ["Hossen Ramezanian"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
requests = "^2.28.2"
scikit-learn = "^1.2.2"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
